# axum-layered-di

./: .env.sample  Cargo.toml
src/: app_state.rs  config.rs  controller.rs  di.rs  infrastructure.rs  main.rs  repository_interfaces.rs  router.rs  usecase.rs
src/domain/: product.rs
src/infrastructure/: mysql_client.rs
src/infrastructure/repositories/: user_repository.rs
src/pkg/: database.rs
src/pkg/database/: mysql.rs  transaction.rs
src/repository_interfaces/: user_repository_interface.rs
