[package]
name = "axum-layered-di"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.0", features = ["full"] }
shaku = "0.6"
async-trait = "0.1"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "chrono"] }
anyhow = "1.0"
dotenvy = "0.15"
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.12", features = ["v4"] }
